--- a/test/trials.ipynb
+++ b/test/trials.ipynb
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a18ce375",
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")"
+    "GOOGLE_API_KEY = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "print(GOOGLE_API_KEY)"
    ]
   }
  ],
